// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lineBase render renders 1`] = `
<g>
  <GridDraggable
    from={
      Object {
        "x": 0,
        "y": 0,
      }
    }
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    to={
      Object {
        "x": 1,
        "y": 1,
      }
    }
  />
  <WithStyles(GridDraggable)
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    x={0}
    y={0}
  />
  <WithStyles(GridDraggable)
    angle={45}
    graphProps={
      Object {
        "domain": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "range": Object {
          "max": 1,
          "min": 0,
          "step": 1,
        },
        "scale": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
        "size": Object {
          "height": 400,
          "width": 400,
        },
        "snap": Object {
          "x": [MockFunction],
          "y": [MockFunction],
        },
      }
    }
    onDrag={[Function]}
    x={1}
    y={1}
  />
</g>
`;

exports[`lineToolComponent snapshot renders 1`] = `
<Component
  from={
    Object {
      "x": 0,
      "y": 0,
    }
  }
  graphProps={
    Object {
      "domain": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "range": Object {
        "max": 1,
        "min": 0,
        "step": 1,
      },
      "scale": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
      "size": Object {
        "height": 400,
        "width": 400,
      },
      "snap": Object {
        "x": [MockFunction],
        "y": [MockFunction],
      },
    }
  }
  onChange={[Function]}
  onDragStart={[Function]}
  onDragStop={[Function]}
  to={
    Object {
      "x": 1,
      "y": 1,
    }
  }
/>
`;
